add bond calc (and get diameter, as needed)

--- a/hoomd-4.2.1-props/hoomd/md/CMakeLists.txt
+++ b/hoomd-4.2.1-props/hoomd/md/CMakeLists.txt
@@ -132,6 +132,7 @@ set(_md_headers ActiveForceComputeGPU.h
                 HarmonicImproperForceCompute.h
                 IntegrationMethodTwoStep.h
                 IntegratorTwoStep.h
+                Lifetime.h #[PROCF2023]
                 ManifoldZCylinder.h
                 ManifoldDiamond.h
                 ManifoldEllipsoid.h
