--- a/hoomd-4.2.1-procf/hoomd/CMakeLists.txt
+++ b/hoomd-4.2.1-procf/hoomd/CMakeLists.txt
@@ -1,3 +1,5 @@
+### Modified by PRO-CF #[PROCF2023] ###
+
 add_subdirectory(extern)
 
 # configure the version information file
@@ -57,6 +59,7 @@ set(_hoomd_sources Action.cc
                    Analyzer.cc
                    BondedGroupData.cc
                    BoxResizeUpdater.cc
+                   BoxShearUpdater.cc #[PROCF2023]
                    CellList.cc
                    CellListStencil.cc
                    ClockSource.cc
@@ -125,6 +128,7 @@ set(_hoomd_headers
     BoxResizeUpdater.h
     BoxResizeUpdaterGPU.cuh
     BoxResizeUpdaterGPU.h
+    BoxShearUpdater.h #[PROCF2023]
     UpdaterRemoveDrift.h
     CachedAllocator.h
     CellListGPU.cuh
