--- a/hoomd-4.2.1-procf/hoomd/update/CMakeLists.txt
+++ b/hoomd-4.2.1-procf/hoomd/update/CMakeLists.txt
@@ -1,5 +1,8 @@
+### Modified by PRO-CF #[PROCF2023] ###
+
 set(files __init__.py
           box_resize.py
+          box_shear.py #[PROCF2023]
           remove_drift.py
           custom_updater.py
           particle_filter.py
