--- a/hoomd-4.2.1-procf/hoomd/CMakeLists.txt
+++ b/hoomd-4.2.1-procf/hoomd/CMakeLists.txt
@@ -57,6 +57,7 @@ set(_hoomd_sources Action.cc
                    Analyzer.cc
                    BondedGroupData.cc
                    BoxResizeUpdater.cc
+                   BoxShearUpdater.cc #[PROCF2024]
                    CellList.cc
                    CellListStencil.cc
                    ClockSource.cc
@@ -125,6 +126,7 @@ set(_hoomd_headers
     BoxResizeUpdater.h
     BoxResizeUpdaterGPU.cuh
     BoxResizeUpdaterGPU.h
+    BoxShearUpdater.h #[PROCF2024]
     UpdaterRemoveDrift.h
     CachedAllocator.h
     CellListGPU.cuh
