--- a/hoomd-4.2.1-procf/hoomd/md/CMakeLists.txt
+++ b/hoomd-4.2.1-procf/hoomd/md/CMakeLists.txt
@@ -1,4 +1,4 @@
-### Modified by PRO-CF #[PROCF2023] ###
+### Modified by PRO-CF #[RHEOINF] ###
 
 
 set(_md_sources module-md.cc
@@ -95,7 +95,7 @@ set(_md_headers ActiveForceComputeGPU.h
                 EvaluatorPairDLVO.h
                 EvaluatorPairDPDThermoLJ.h
                 EvaluatorPairDPDThermoDPD.h
-                EvaluatorPairDPDThermoDPDMorse.h #[PROCF2023]
+                EvaluatorPairDPDThermoDPDMorse.h #[RHEOINF]
                 EvaluatorPairEwald.h
                 EvaluatorPairForceShiftedLJ.h
                 EvaluatorPairGauss.h
@@ -108,7 +108,7 @@ set(_md_headers ActiveForceComputeGPU.h
                 EvaluatorPairExpandedMie.h
                 EvaluatorPairMoliere.h
                 EvaluatorPairMorse.h
-                EvaluatorPairMorseRepulse.h #[PROCF2023]
+                EvaluatorPairMorseRepulse.h #[RHEOINF]
                 EvaluatorPairOPP.h
                 EvaluatorPairFourier.h
                 EvaluatorPairReactionField.h
@@ -133,7 +133,7 @@ set(_md_headers ActiveForceComputeGPU.h
                 HarmonicImproperForceCompute.h
                 IntegrationMethodTwoStep.h
                 IntegratorTwoStep.h
-                Lifetime.h #[PROCF2023]
+                Lifetime.h #[RHEOINF]
                 ManifoldZCylinder.h
                 ManifoldDiamond.h
                 ManifoldEllipsoid.h
@@ -453,7 +453,7 @@ foreach(_evaluator ${_external_evaluators})
     endif()
 endforeach()
 
-set(_wall_evaluators LJ Yukawa ForceShiftedLJ Mie Gauss Morse) #add MorseRepulse if you want it to be a wall evaluator? [PROCF2024]
+set(_wall_evaluators LJ Yukawa ForceShiftedLJ Mie Gauss Morse) #add MorseRepulse if you want it to be a wall evaluator? [RHEOINF]
 
 foreach(_evaluator ${_wall_evaluators})
     configure_file(export_PotentialExternalWall.cc.inc
@@ -476,7 +476,7 @@ foreach(_evaluator ${_wall_evaluators})
     endif()
 endforeach()
 
-set(_dpdthermo_evaluators DPD LJ DPDMorse) # add DPDMorse [PROCF2023]
+set(_dpdthermo_evaluators DPD LJ DPDMorse) # add DPDMorse [RHEOINF]
 
 foreach(_evaluator ${_dpdthermo_evaluators})
     configure_file(export_PotentialPairDPDThermo.cc.inc
@@ -509,7 +509,7 @@ set(_pair_evaluators Buckingham
                      Yukawa
                      Ewald
                      Morse
-                     MorseRepulse #[PROCF2023]
+                     MorseRepulse #[RHEOINF]
                      ConservativeDPD
                      Moliere
                      ZBL
