--- a/hoomd-4.2.1-procf/hoomd/update/CMakeLists.txt
+++ b/hoomd-4.2.1-procf/hoomd/update/CMakeLists.txt
@@ -3,7 +3,7 @@ set(files __init__.py
           remove_drift.py
           custom_updater.py
           particle_filter.py
-          box_shear.py # [PROCF2024]
+          box_shear.py # [RHEOINF]
    )
 
 install(FILES ${files}
