draft of how to track bond information and calculate effects of restricted Rotation

--- a/hoomd-4.2.1-procf/hoomd/md/CMakeLists.txt
+++ b/hoomd-4.2.1-procf/hoomd/md/CMakeLists.txt
@@ -9,6 +9,7 @@ set(_md_sources module-md.cc
                    AnisoPotentialPairALJ3.cc
                    AnisoPotentialPairDipole.cc
                    AnisoPotentialPairGB.cc
+                   AnisoPotentialPairRotation.cc #[RHEOINF]
                    AlchemyData.cc
                    BondTablePotential.cc
                    CommunicatorGrid.cc
@@ -111,6 +112,7 @@ set(_md_headers ActiveForceComputeGPU.h
                 EvaluatorPairMorseRepulse.h #[RHEOINF]
                 EvaluatorPairOPP.h
                 EvaluatorPairFourier.h
+                EvaluatorPairRotation.h #[RHEOINF]
                 EvaluatorPairReactionField.h
                 EvaluatorPairExpandedLJ.h
                 EvaluatorPairTable.h
